--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1 class="text-3xl font-bold underline">
-  hello world!
-</h1>
+<div class="bg-[var(--color-primary)] min-h-screen w-full flex items-center justify-center">
+  <span class="text-[var(--color-highlight)]">asd</span>
+</div>
