--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="bg-[var(--color-primary)] min-h-screen w-full flex items-center justify-center">
-  <span class="text-[var(--color-highlight)]">asd</span>
+  <div class="w-2/3 max-w-4xl">
+    <app-symbol-input></app-symbol-input>
+  </div>
 </div>
