--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,3 +7,25 @@
     --color-accent: #5BC0BE;
     --color-highlight: #6FFFE9;
 }
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-secondary) var(--color-primary);
+}
+
+/* Chrome, Edge, és Safari */
+*::-webkit-scrollbar {
+  width: 20px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--color-primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--color-secondary);
+  border-radius: 14px;
+  border: 3px solid var(--color-primary);
+}
